# lab7_cicd

./: README.md  databricks.yml  pyproject.toml
.github/workflows/: pipeline_update.yml  sync_git_folder.yml
resources/: dashboards.yml  lab7_cicd_etl.pipeline.yml  sample_job.job.yml
src/dashboards/: transport_dashboard.lvdash.json
src/lab7_cicd_etl/: README.md
src/lab7_cicd_etl/transformations/: bronze_to_silver.py  eh_to_bronze.py  silver_to_gold.py
